# CFB25DynastyTracker

./: .gitignore  .replit  README.md  at_database.py  dynasty.csv  notes  pyproject.toml
data/: at_database.py  dynasty.csv
src/: dynasty_setup.py  main.py  roster.py  utils.py
